ne pas tenir en compte la langue

--- a/fonds/cfg_mp.html
+++ b/fonds/cfg_mp.html
@@ -1,9 +1,6 @@
 #CACHE{0}
 
-[(#REM) titre=NB]
-[(#REM) descriptif=
-<h1>Configuration du plugin Muziekpublique</h1>
-]
+[(#REM) titre=Muziekpublique]
 
 <div class="ajax">
     #FORMULAIRE_CONFIGURER_MP
